<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_perfiles" />
        <item
            android:id="@+id/nav_cita"
            android:icon="@drawable/ic_appointments"
            android:title="@string/menu_cita" />
        <item
            android:id="@+id/nav_expediente"
            android:icon="@drawable/ic_expediente"
            android:title="@string/menu_expediente" />
        <item
            android:id="@+id/nav_servicio"
            android:icon="@drawable/ic_service"
            android:title="@string/menu_servicio" />
        <item
            android:id="@+id/nav_promocion"
            android:icon="@drawable/ic_promocion"
            android:title="@string/menu_promocion" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contacto" />
    </group>
</menu>