<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.expediente.UpdateExpedienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/etNombrePaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre_paciente"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPadecimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_padecimiento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etNombreDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_nombre_doctor"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_dia"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_fecha"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_hora"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etMedicamentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_medicamentos"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etCuidados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_cuidados"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btActualizarDatosExpediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_actualizar_expediente" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>