<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vistaFilaPerfil"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardElevation="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_NombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_nombre_usuario"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_fecha_nacimiento"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_FechaNacimiento"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_fecha_nacimiento"
                android:inputType="date"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ibPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_peso"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_Peso"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_peso"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_direccion"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_Direccion"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_direccion"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ibEstatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_altura"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_Estatura"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_estatura"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibNumeroTelefonico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_phone"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_NumeroTelefonico"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_telefono"
                android:inputType="phone"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibCorreoElectronico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="true"
                android:src="@drawable/ic_email"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_CorreoElectronico"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/msg_correo"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>